fix #holdings tab scrollbar
should only appear when its needed, causes some weird layouts
e.g. on Nat Geo or other titles where there are so many items
that Koha does not show them all initially, there's an extra
gray padding strip because of the (unusable) scrollbar

--- a/catalog-scss/_bib-details.scss
+++ b/catalog-scss/_bib-details.scss
@@ -13,8 +13,10 @@
 // long holdings block can overstep its bounds
 // might be a problem with other pieces but I'm being very conservative
 // and _only_ fixing the observed problem
+// UPDATE 2022-12-20: change to `auto` to avoid scrollbar appearing
+// when it's not needed
 #holdings {
-    overflow: scroll;
+    overflow: auto;
 }
 
 .item-status {
